# logagg

./: Cargo.toml  README.md  cfg.yaml
.github/workflows/: release.yaml
src/: cfg.rs  main.rs  output.rs  server.rs
src/cfg/: entity.rs
src/cmd/: parser.rs
src/output/: entity.rs  file.rs  mod.rs
src/server/: mod.rs
