[package]
name = "logagg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
anyhow = "1.0.56"
actix = "0.13.0"
actix-web = "4.0.1"
actix-web-actors = "4.1.0"
actix-rt = "2.7.0"
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
log = "0.4.0"
simple_logger = "2.1.0"
flate2 = "1.0.23"